Added some styles

--- a/views/agilite.html.twig
+++ b/views/agilite.html.twig
@@ -1,27 +1,32 @@
 {% extends "layout.html.twig" %}
 
 {% block content %} 
-	<div class="container contact">
-		<div class="row">
-			<section class="large-12 columns">
-				<article>
+	<div class="container agilite">
+		<header class="landing landing-agilite">
+			<div class="row">
+				<div class="large-8 columns">
+					<h1>L'agilité te rend agile,<br> un peu comme un ninja.</h1>
+					<p>
+						Une agence digitale qui met sa philosophie Agile au service de la réussite de votre projet.
+					</p>	
+				</div>
+			</div>
+		</header>
+		<section class="push-top content">
+			<div class="row">
+				<article class="large-12 columns">
 					<h2>Ceci est un titre</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto inventore culpa at facere quia nisi doloribus dolores praesentium. Id, vero, saepe quasi officia dolores accusantium corrupti delectus! Laboriosam, incidunt, ab?</p>
 				</article>
-			</section>
-			<section class="large-12 columns">
-				<article>
+				<article class="large-12 columns">
 					<h2>Ceci est un titre</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto inventore culpa at facere quia nisi doloribus dolores praesentium. Id, vero, saepe quasi officia dolores accusantium corrupti delectus! Laboriosam, incidunt, ab?</p>
 				</article>
-			</section>
-			<section class="large-12 columns">
-				<article>
+				<article class="large-12 columns">
 					<h2>Ceci est un titre</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto inventore culpa at facere quia nisi doloribus dolores praesentium. Id, vero, saepe quasi officia dolores accusantium corrupti delectus! Laboriosam, incidunt, ab?</p>
 				</article>
-			</section>	
-		</div>
-		
+			</div>	
+		</section>	
 	</div>
 {% endblock %}
