--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -18,7 +18,7 @@
 					</span>
 				</i>
 				<div class="logo">
-				      <img class="svg" src="assets/img/logo_small.svg" alt="">
+					<a href="/"><img class="svg" src="assets/img/logo_small.svg" alt=""></a>
 				</div>
 				<div class='nav-links-wrapper nav-links-hidden'>
 					<a class='nav-link current' href="/" data-pos="1">Home</a>
