--- a/web/assets/scss/style.scss
+++ b/web/assets/scss/style.scss
@@ -56,12 +56,8 @@ a {
 	&.button {
 		font-family: "Source Sans Pro";
 		transition:all .3s cubic-bezier(0.165,0.840,0.440,1.000);
-
-		&:active {
-			transform:translateY(rem-calc(4));
-			box-shadow: 0px 0px 0px 0px #384047;
-		}
 	}
+
 }
 
 /* COMPONENTS */ 
@@ -74,6 +70,7 @@ a {
 		transition:transform .6s cubic-bezier(0.165,0.840,0.440,1.000);
 		.main-wrapper{
 			position:relative; z-index:1;
+			overflow: hidden;
 		}	
 	}
 
@@ -159,6 +156,7 @@ a {
 				opacity:1;
 				transition-delay: 0s;
 				transition: fill 0.2s, opacity 0.2s;
+
 				//transform: scale(0.97);
 				
 			}
@@ -187,7 +185,7 @@ a {
 		}
 	}
 
-	.landing-agility-button {
+	.primary-button {
 		width: rem-calc(292);
 		height: rem-calc(42);
 		background: #4f5a64;
@@ -201,6 +199,17 @@ a {
 
 		@media #{$medium-up} {
 			pointer-events: visible;
+		}
+
+		&:hover {
+			transform:translateY(rem-calc(1));
+			box-shadow: 0px 3px 0px 0px #384047;
+			background:#58646F;
+		}
+
+		&:active {
+			transform:translateY(rem-calc(4));
+			box-shadow: 0px 0px 0px 0px #384047;
 		}
 	}
 
@@ -222,7 +231,6 @@ a {
 		}
 	}
 }
-
 .svg-anim.svg-valeur{
 	margin-top:rem-calc(500);
 
@@ -265,6 +273,34 @@ a {
 }
 
 
+.landing{
+	height:rem-calc(500);
+	padding-top: rem-calc(160);
+	width: 100%;
+	background-image: url('../img/bg_home.png');
+	position: fixed; top:0; left:0;
+	z-index:1;
+
+	h1{
+		margin:4rem 0;
+		line-height: rem-calc(58);
+	}
+}
+
+.push-top{
+	margin-top:rem-calc(500);
+}
+
+.content{
+	background: white;
+	position: relative;
+	z-index:2;
+	padding:3rem 0;
+}
+
+/*AGILITE*/
+
+
 /*REFERENCES*/
 div.references{
 	background:#f2f8f8;
@@ -272,6 +308,7 @@ div.references{
 	z-index:1;
 	padding: 4rem 0;
 }
+
 /*FOOTER*/
 footer{
 
@@ -301,16 +338,24 @@ footer{
 
 	a.button{
 		margin-bottom:rem-calc(20);
-		font-size: rem-calc(28);
+		font-size: rem-calc(24);
 		font-family: Source sans pro;
 		background: transparent;
 		border: 4px solid white;
-		padding: 0.3em 1.3em;
+		padding: 0.5em 1.3em;
 		border-radius: 8px;
 
 		@media #{$medium-up} {
 			margin-bottom:rem-calc(180);
 		}
+
+
+		&:hover{
+			color: $primary-color;
+			background:white;
+		}
+
+
 	}
 
 	.copyright{
