--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -12,7 +12,7 @@
 						Bonjour.
 					</h1>
 					<p>Kilix est une super agence qui fait des trucs super avec l’agilité.</p>
-					<a class='landing-agility-button button '>
+					<a class='primary-button button '>
 						L’agilité au coeur de vos projets
 					</a>
 				</div>
@@ -33,19 +33,18 @@
 			<div class="row">
 				<div class="large-4 columns">
 					<h2>Gestion par la valeur</h2>
-					<h3>L'essentiel en premier !</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum, debitis dicta a nemo libero esse. Cupiditate, facilis asperiores qui velit eveniet eligendi quos nostrum iusto minus similique. Non, qui, ipsa.</p>
+					<h3>L’essentiel avant tout !</h3>
+					<p>Parce que votre Time-to-Market est notre première priorité : Valorisez vos besoins, et reprenez le contrôle de vos projets. Ensemble, développons avant tout ce qui compte vraiment.</p>
 				</div>
 				<div class="large-8 columns">
-					<svg id="VALEUR-dispatch" x="0px" y="0px" viewBox="0 0 1400 700"></svg>
-					
+					<svg id="VALEUR-dispatch" x="0px" y="0px" viewBox="0 0 1400 700"></svg>		
 				</div>
 			</div>
 		</section>
 		<section class="svg-anim svg-risque">
 			<div class="row">
 				<div class="large-8 columns">
-					
+					<img src="http://placehold.it/790x500&text=svg" alt="">
 				</div>
 				<div class="large-4 columns">
 					<h2>Gestion par la valeur</h2>
@@ -62,14 +61,14 @@
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum, debitis dicta a nemo libero esse. Cupiditate, facilis asperiores qui velit eveniet eligendi quos nostrum iusto minus similique. Non, qui, ipsa.</p>
 				</div>
 				<div class="large-8 columns">
-					
+					<img src="http://placehold.it/790x500&text=svg" alt="">
 				</div>
 			</div>
 		</section>
 		<section class="svg-anim svg-extia">
 			<div class="row">
 				<div class="large-8 columns">
-					
+					<img src="http://placehold.it/790x500&text=svg" alt="">
 				</div>
 				<div class="large-4 columns">
 					<h2>Gestion par la valeur</h2>
