--- a/views/agilite.html.twig
+++ b/views/agilite.html.twig
@@ -5,10 +5,7 @@
 		<header class="landing landing-agilite">
 			<div class="row">
 				<div class="large-8 columns">
-					<h1>L'agilité te rend agile,<br> un peu comme un ninja.</h1>
-					<p>
-						Une agence digitale qui met sa philosophie Agile au service de la réussite de votre projet.
-					</p>	
+					<h1>L'agilité te rend agile,<br> <span>(un peu comme un ninja).</span></h1>
 				</div>
 			</div>
 		</header>
