Added placeholder images

--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -3,7 +3,6 @@
 {% block content %}
 	<div class="container home">
 		<header class="landing-home">
-			<img src="assets/img/abstract.svg" alt="" class="svg svg-bg show-for-medium-up">
 			<div class="row">
 				<div class="large-7 columns">
 					<h1 class='landing-main-text'>
@@ -43,13 +42,13 @@
 		</section>
 		<section class="svg-anim svg-risque">
 			<div class="row">
-				<div class="large-8 columns">
-					<img src="http://placehold.it/790x500&text=svg" alt="">
-				</div>
-				<div class="large-4 columns">
+				<div class="large-4 large-push-8 columns">
 					<h2>Gestion par la valeur</h2>
 					<h3>L'essentiel en premier !</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum, debitis dicta a nemo libero esse. Cupiditate, facilis asperiores qui velit eveniet eligendi quos nostrum iusto minus similique. Non, qui, ipsa.</p>
+				</div>
+				<div class="large-8 large-pull-4 columns">
+					<img src="http://placehold.it/790x500&text=svg" alt="">
 				</div>
 			</div>
 		</section>
@@ -67,13 +66,13 @@
 		</section>
 		<section class="svg-anim svg-extia">
 			<div class="row">
-				<div class="large-8 columns">
-					<img src="http://placehold.it/790x500&text=svg" alt="">
-				</div>
-				<div class="large-4 columns">
+				<div class="large-4 large-push-8 columns">
 					<h2>Gestion par la valeur</h2>
 					<h3>L'essentiel en premier !</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum, debitis dicta a nemo libero esse. Cupiditate, facilis asperiores qui velit eveniet eligendi quos nostrum iusto minus similique. Non, qui, ipsa.</p>
+				</div>
+				<div class="large-8 large-pull-4 columns">
+					<img src="http://placehold.it/790x500&text=svg" alt="">
 				</div>
 			</div>
 		</section>
