--- a/views/scripts-debug.html.twig
+++ b/views/scripts-debug.html.twig
@@ -55,11 +55,11 @@ $(function(){
         }, 'slow'); 
     });
 
-    setTimeout(function(){
-        Snap("#abstract").selectAll("polygon").forEach(function(t){
-            t.hover(svgIn, svgOut);
-        });
-    }, 300);
+    // setTimeout(function(){
+    //     Snap("#abstract").selectAll("polygon").forEach(function(t){
+    //         t.hover(svgIn, svgOut);
+    //     });
+    // }, 300);
     
     var colorArray = {
         col1: '#e63429',
