--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -36,12 +36,12 @@
 		  	</div>
 		  	<div class="references">
 		  		<div class="row">
-		  			<div class="large-2 columns"><img src="http://placehold.it/170x80" alt=""></div>
-		  			<div class="large-2 columns"><img src="http://placehold.it/170x80" alt=""></div>
-		  			<div class="large-2 columns"><img src="http://placehold.it/170x80" alt=""></div>
-		  			<div class="large-2 columns"><img src="http://placehold.it/170x80" alt=""></div>
-		  			<div class="large-2 columns"><img src="http://placehold.it/170x80" alt=""></div>
-		  			<div class="large-2 columns"><img src="http://placehold.it/170x80" alt=""></div>
+		  			<div class="small-4 medium-2 columns"><img src="http://placehold.it/170x80" alt=""></div>
+		  			<div class="small-4 medium-2 columns"><img src="http://placehold.it/170x80" alt=""></div>
+		  			<div class="small-4 medium-2 columns"><img src="http://placehold.it/170x80" alt=""></div>
+		  			<div class="small-4 medium-2 columns"><img src="http://placehold.it/170x80" alt=""></div>
+		  			<div class="small-4 medium-2 columns"><img src="http://placehold.it/170x80" alt=""></div>
+		  			<div class="small-4 medium-2 columns"><img src="http://placehold.it/170x80" alt=""></div>
 		  		</div>
 		  	</div>
 			<footer>
