--- a/views/animation2.html.twig
+++ b/views/animation2.html.twig
@@ -2,6 +2,6 @@
 
 {% block content %}
     <svg version="1.1" id="RISK-dispatch" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
-     y="0px" width="1600px" height="900px" viewBox="0 0 1600 900" enable-background="new 0 0 1600 900" xml:space="preserve">
+     y="0px" width="100%" height="900px" viewBox="0 0 1600 900" enable-background="new 0 0 1600 900" xml:space="preserve">
     </svg>
 {% endblock %}
