Js structure and pushstate tmp deactived

--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -54,7 +54,6 @@
 		</div>
 		<!-- DEBUG : Par la suite le fichier mix.js générera le min.js -->
   		{% include "scripts-debug.html.twig" %}
-  		<script type="text/javascript">
-  		</script>
+  		{% block scripts %}{% endblock %}
 	</body>
 </html>
