Fix pushstate transition + javascript Fix pushstate navlink current Fix position fixed on landing when for small-only

--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -1,7 +1,7 @@
 {% extends "layout.html.twig" %}
 
 {% block content %}
-	<div class="container home">
+	<div class="container home" data-page="home">
 		<header class="landing-home">
 			<div class="row">
 				<div class="large-7 columns">
@@ -79,6 +79,3 @@
 		</section>
 	</div>
 {% endblock %}
-
-
-{% block scripts %}{% endblock %}
