--- a/views/agilite.html.twig
+++ b/views/agilite.html.twig
@@ -1,7 +1,7 @@
 {% extends "layout.html.twig" %}
 
 {% block content %} 
-	<div class="container agilite">
+	<div class="container agilite" data-page="agilite">
 		<header class="landing landing-agilite">
 			<div class="row">
 				<div class="large-8 columns">
