--- a/web/assets/scss/style.scss
+++ b/web/assets/scss/style.scss
@@ -117,12 +117,12 @@ a {
 	padding-top: rem-calc(120);
 	background-image: url('http://placehold.it/320x200/f0f0f0/dddddd/&text=background');
 	background-size: cover;
-	position: fixed; top:0; left:0;
 	-webkit-backface-visibility: hidden; 
 	-webkit-transform: translateZ(0);
 	z-index:1;
 
 	@media #{$medium-up}{
+		position: fixed; top:0; left:0;
 		background-image: url('../img/landing-bg.png');
 	}
 
@@ -191,7 +191,6 @@ a {
 	}
 }
 .svg-anim.svg-valeur{
-	margin-top:rem-calc(500);
 	box-shadow: 0 -1px 0 rgba(0,0,0,.1);
 
 	@media #{$medium-up} {
@@ -233,13 +232,19 @@ a {
 }
 
 
+
+/*AGILITE*/
+
 .landing{
 	height:rem-calc(600);
 	padding-top: rem-calc(220);
 	width: 100%;
 	background-image: url('http://placehold.it/320x200/f0f0f0/dddddd/&text=background');
-	position: fixed; top:0; left:0;
 	z-index:1;
+
+	@media #{$medium-up} {
+		position: fixed; top:0; left:0;	
+	}
 
 	h1{
 		margin:4rem 0;
@@ -253,7 +258,9 @@ a {
 }
 
 .push-top{
-	margin-top:rem-calc(600);
+	@media #{$medium-up} {
+		margin-top:rem-calc(600);
+	}
 }
 
 .content{
@@ -263,9 +270,6 @@ a {
 	z-index:2;
 	padding:5rem 0;
 }
-
-/*AGILITE*/
-
 
 /*REFERENCES*/
 div.references{
