Some design tweaks

--- a/views/agilite.html.twig
+++ b/views/agilite.html.twig
@@ -24,6 +24,7 @@
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto inventore culpa at facere quia nisi doloribus dolores praesentium. Id, vero, saepe quasi officia dolores accusantium corrupti delectus! Laboriosam, incidunt, ab?</p>
 				</article>
 			</div>	
-		</section>	
+		</section>
+		{% include "contact-footer.html.twig" %}
 	</div>
 {% endblock %}
