--- a/views/contact.html.twig
+++ b/views/contact.html.twig
@@ -2,8 +2,31 @@
 
 {% block content %} 
 	<div class="container contact">
-		<section class="large-12 columns panel h2000">
-			contact
-		</section>
+		<header class="landing landing-contact">
+			<div class="map">
+				<iframe width='100%' height='100%' frameBorder='0' src='https://a.tiles.mapbox.com/v3/bulby97.map-zj10lv4w/mm/index.html?secure=1#18/48.82681/2.22268'></iframe>
+			</div>
+			<div class="row">
+				<div class="large-8 columns">
+					<h1>Ecoute, <br> maman est près de toi ?</h1>
+				</div>
+			</div>
+		</header>
+		<section class="push-top content">
+			<div class="row">
+				<article class="large-12 columns">
+					<h2>Ceci est un titre</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto inventore culpa at facere quia nisi doloribus dolores praesentium. Id, vero, saepe quasi officia dolores accusantium corrupti delectus! Laboriosam, incidunt, ab?</p>
+				</article>
+				<article class="large-12 columns">
+					<h2>Ceci est un titre</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto inventore culpa at facere quia nisi doloribus dolores praesentium. Id, vero, saepe quasi officia dolores accusantium corrupti delectus! Laboriosam, incidunt, ab?</p>
+				</article>
+				<article class="large-12 columns">
+					<h2>Ceci est un titre</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto inventore culpa at facere quia nisi doloribus dolores praesentium. Id, vero, saepe quasi officia dolores accusantium corrupti delectus! Laboriosam, incidunt, ab?</p>
+				</article>
+			</div>	
+		</section>	
 	</div>
 {% endblock %}
