add html structure for agile page

--- a/views/agilite.html.twig
+++ b/views/agilite.html.twig
@@ -13,15 +13,35 @@
 			<div class="row">
 				<article class="large-12 columns">
 					<h2>Ceci est un titre</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto inventore culpa at facere quia nisi doloribus dolores praesentium. Id, vero, saepe quasi officia dolores accusantium corrupti delectus! Laboriosam, incidunt, ab?</p>
+					<div class="large-3 columns">
+					</div>
+					<div class="large-9 columns">
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto inventore culpa at facere quia nisi doloribus dolores praesentium. Id, vero, saepe quasi officia dolores accusantium corrupti delectus! Laboriosam, incidunt, ab?</p>
+					</div>
 				</article>
 				<article class="large-12 columns">
 					<h2>Ceci est un titre</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto inventore culpa at facere quia nisi doloribus dolores praesentium. Id, vero, saepe quasi officia dolores accusantium corrupti delectus! Laboriosam, incidunt, ab?</p>
+					<div class="large-3 columns">
+					</div>
+					<div class="large-9 columns">
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto inventore culpa at facere quia nisi doloribus dolores praesentium. Id, vero, saepe quasi officia dolores accusantium corrupti delectus! Laboriosam, incidunt, ab?</p>
+					</div>
 				</article>
 				<article class="large-12 columns">
 					<h2>Ceci est un titre</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto inventore culpa at facere quia nisi doloribus dolores praesentium. Id, vero, saepe quasi officia dolores accusantium corrupti delectus! Laboriosam, incidunt, ab?</p>
+					<div class="large-3 columns">
+					</div>
+					<div class="large-9 columns">
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto inventore culpa at facere quia nisi doloribus dolores praesentium. Id, vero, saepe quasi officia dolores accusantium corrupti delectus! Laboriosam, incidunt, ab?</p>
+					</div>
+				</article>
+				<article class="large-12 columns">
+					<h2>Ceci est un titre</h2>
+					<div class="large-3 columns">
+					</div>
+					<div class="large-9 columns">
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto inventore culpa at facere quia nisi doloribus dolores praesentium. Id, vero, saepe quasi officia dolores accusantium corrupti delectus! Laboriosam, incidunt, ab?</p>
+					</div>
 				</article>
 			</div>	
 		</section>	
