remove comment of animation-value call

--- a/views/scripts-debug.html.twig
+++ b/views/scripts-debug.html.twig
@@ -12,5 +12,5 @@
 
 <!-- HOME -->
 <script src="assets/js/animations-functions.js"></script>
-<!-- <script src="assets/js/animation-value.js"></script> -->
+<script src="assets/js/animation-value.js"></script>
 <script src="assets/js/animation-risk.js"></script>
