--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -43,9 +43,9 @@
 		<section class="svg-anim svg-risque">
 			<div class="row">
 				<div class="large-4 large-push-8 columns">
-					<h2>Gestion par la valeur</h2>
-					<h3>L'essentiel en premier !</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum, debitis dicta a nemo libero esse. Cupiditate, facilis asperiores qui velit eveniet eligendi quos nostrum iusto minus similique. Non, qui, ipsa.</p>
+					<h2>Gestion par les risques</h2>
+					<h3>Anticiper l’imprévu !</h3>
+					<p>Plus que jamais, l’imprévisible est toujours le pire ennemi du projet. C’est en anticipant conjointement les futurs écueils que nous protégeons vos projets afin d’en assurer leur totale réussite.</p>
 				</div>
 				<div class="large-8 large-pull-4 columns">
 					<svg id="RISK-dispatch" x="0px" y="0px" viewBox="600 100 800 600">
@@ -55,10 +55,10 @@
 		</section>
 		<section class="svg-anim svg-amelio">
 			<div class="row">
-				<div class="large-4 columns">
-					<h2>Gestion par la valeur</h2>
-					<h3>L'essentiel en premier !</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum, debitis dicta a nemo libero esse. Cupiditate, facilis asperiores qui velit eveniet eligendi quos nostrum iusto minus similique. Non, qui, ipsa.</p>
+				<div class="large-5 columns">
+					<h2>Extia</h2>
+					<h3>Paré à toute éventualité !</h3>
+					<p>Nous tirons notre expertise d’Extia, qui met à votre disposition ses meilleurs consultants et qui vous garantissent la réussite de votre projet au Time-To-Market optimisé, aux risques maîtrisés, avec les méthodes de gestion de projet les plus rodées. </p>
 				</div>
 				<div class="large-8 columns">
 					<svg id="AMELIO-transform" x="0px" y="0px" viewBox="0 0 1500 800">
@@ -69,9 +69,9 @@
 		<section class="svg-anim svg-extia">
 			<div class="row">
 				<div class="large-4 large-push-8 columns">
-					<h2>Gestion par la valeur</h2>
-					<h3>L'essentiel en premier !</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum, debitis dicta a nemo libero esse. Cupiditate, facilis asperiores qui velit eveniet eligendi quos nostrum iusto minus similique. Non, qui, ipsa.</p>
+					<h2>Amélioration continue</h2>
+					<h3>Se perfectionner sans cesse</h3>
+					<p>Tous les projets sont différents. Nous profitons de cette diversité pour apprendre continuellement et toujours viser l’excellence. Ainsi, nous mettons à profit ces retours d’expérience au service de vos produits.</p>
 				</div>
 				<div class="large-8 large-pull-4 columns">
 					<img src="http://placehold.it/790x500&text=svg" alt="">
