--- a/web/assets/scss/style.scss
+++ b/web/assets/scss/style.scss
@@ -109,12 +109,13 @@ a {
 /*HOME*/
 .landing-home{
 	height:rem-calc(500);
-
+	padding-top: rem-calc(63);
+	
 	@media #{$medium-up} {
 		height:rem-calc(850);
+		padding-top: rem-calc(120);
 	}
 	width: 100%;
-	padding-top: rem-calc(120);
 	background-image: url('http://placehold.it/320x200/f0f0f0/dddddd/&text=background');
 	background-size: cover;
 	-webkit-backface-visibility: hidden; 
@@ -205,7 +206,10 @@ a {
 
 	svg{
 		width: 100%;
-		height: rem-calc(500);
+		height: rem-calc(250);
+		@media #{$medium-up} {
+			height: rem-calc(500);
+		}
 	}
 	 
 	.row{
@@ -238,12 +242,13 @@ a {
 
 .landing{
 	height:rem-calc(500);
-	padding-top: rem-calc(160);
+	padding-top: rem-calc(30);
 	width: 100%;
 	background-image: url('http://placehold.it/320x200/f0f0f0/dddddd/&text=background');
 	z-index:1;
 
 	@media #{$medium-up} {
+		padding-top: rem-calc(160);
 		position: fixed; top:0; left:0;	
 	}
 
@@ -259,8 +264,9 @@ a {
 }
 
 .push-top{
-	margin-top:rem-calc(500);
-
+	@media #{$medium-up} {
+		margin-top:rem-calc(500);
+	}
 }
 
 .content{
