Added arrows to landing home

--- a/views/contact-footer.html.twig
+++ b/views/contact-footer.html.twig
@@ -1,6 +1,6 @@
 <div class="footer-contact">
 	<div class="row">
 		<q>Let's start a new project together!</q>
-		<a href="/contact" class="button">Contactez-nous</a>	
+		<a href="/contact" class="button button-white">Contactez-nous</a>	
 	</div>
 </div>
