--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -4,6 +4,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Kilix V2</title>
+		<!-- TODO : A changer quand le site sera finalisé -->
+		<link rel="stylesheet" href="http://i.icomoon.io/public/temp/7ddd5eacdd/Kilix/style.css">
   		<link href="/assets/css/app.min.css" rel="stylesheet" type="text/css" media="all"/>
   		<script src="assets/js/vendor/modernizr.min.js"></script>
 	</head>
@@ -13,8 +15,7 @@
 				<i class="toggle-menu show-for-small-only">
 					<span class='icon-folded'>≡</span>
 					<span class='icon-unfolded'>
-						<!-- ▲ --><!-- ⏚ -->
-						<img src="assets/img/ARROW_TOP_VA_MOURIR_STEPH.png" />
+						<!-- TODO : Flêche ici -->
 					</span>
 				</i>
 				<div class="logo">
@@ -38,7 +39,7 @@
 		<footer>
 			<div class="copyright">Kilix love extia copyright tout ça</div>
 		</footer>
-		<!-- DEBUG : Par la suite le fichier mix.js générera le min.js -->
+		<!-- TODO : Par la suite le fichier mix.js générera le min.js -->
   		{% include "scripts-debug.html.twig" %}
   		{% block scripts %}{% endblock %}
 	</body>
