--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -6,30 +6,25 @@
 			<div class="row">
 				<div class="large-7 columns">
 					<h1 class='landing-main-text'>
-						Syndrome de<br>
-						la page blanche,<br>
-						Bonjour.
+						Nous
+						are the
+						World
 					</h1>
-					<p>Kilix est une super agence qui fait des trucs super avec l’agilité.</p>
-					<a class='primary-button button '>
-						L’agilité au coeur de vos projets
+					<p>Kilix est une agence digitale mettant l'agilité au service de vos projets web et mobile.</p>
+					<a class='landing-button'>
+						<i class="icon-long-arrow-down"> </i> <span>L’agilité au coeur de vos projets</span>
 					</a>
 				</div>
 				<div class="large-5 columns">
 					
 				</div>
-				<div class='landing-next-section-wrapper show-for-medium-up'>
-					<div class='landing-next-section-back'>
-						<!-- Carré -->
-					</div>
-					<div class='landing-next-section-arrow'>
-						<!-- Fleche -->
-					</div>
-				</div>
 			</div>
 		</header>
 		<section class="svg-anim svg-valeur">
 			<div class="row">
+				<a class='next-section'>
+					<i class="icon-long-arrow-down"> </i>
+				</a>
 				<div class="large-4 columns">
 					<h2>Gestion par la valeur</h2>
 					<h3>L’essentiel avant tout !</h3>
@@ -42,6 +37,9 @@
 		</section>
 		<section class="svg-anim svg-risque">
 			<div class="row">
+				<a class='next-section'>
+					<i class="icon-long-arrow-down"> </i>
+				</a>
 				<div class="large-4 large-push-8 columns">
 					<h2>Gestion par les risques</h2>
 					<h3>Anticiper l’imprévu !</h3>
@@ -55,6 +53,9 @@
 		</section>
 		<section class="svg-anim svg-amelio">
 			<div class="row">
+				<a class='next-section'>
+					<i class="icon-long-arrow-down"> </i>
+				</a>
 				<div class="large-5 columns">
 					<h2>Extia</h2>
 					<h3>Paré à toute éventualité !</h3>
@@ -62,8 +63,9 @@
 				</div>
 				<div class="large-8 columns">
 					<svg id="AMELIO-transform" x="0px" y="0px" viewBox="0 0 1500 800">
-    </svg>
+    				</svg>
 				</div>
+
 			</div>
 		</section>
 		<section class="svg-anim svg-extia">
