--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -6,9 +6,7 @@
 			<div class="row">
 				<div class="large-7 columns">
 					<h1 class='landing-main-text'>
-						Nous
-						are the
-						World
+						Kilix est une agence digitale
 					</h1>
 					<p>Kilix est une agence digitale mettant l'agilité au service de vos projets web et mobile.</p>
 					<a class='landing-button'>
@@ -57,9 +55,9 @@
 					<i class="icon-long-arrow-down"> </i>
 				</a>
 				<div class="large-5 columns">
-					<h2>Extia</h2>
-					<h3>Paré à toute éventualité !</h3>
-					<p>Nous tirons notre expertise d’Extia, qui met à votre disposition ses meilleurs consultants et qui vous garantissent la réussite de votre projet au Time-To-Market optimisé, aux risques maîtrisés, avec les méthodes de gestion de projet les plus rodées. </p>
+					<h2>Amélioration continue</h2>
+					<h3>Se perfectionner sans cesse</h3>
+					<p>Tous les projets sont différents. Nous profitons de cette diversité pour apprendre continuellement et toujours viser l’excellence. Ainsi, nous mettons à profit ces retours d’expérience au service de vos produits.</p>
 				</div>
 				<div class="large-8 columns">
 					<svg id="AMELIO-transform" x="0px" y="0px" viewBox="0 0 1500 800">
@@ -71,9 +69,9 @@
 		<section class="svg-anim svg-extia">
 			<div class="row">
 				<div class="large-4 large-push-8 columns">
-					<h2>Amélioration continue</h2>
-					<h3>Se perfectionner sans cesse</h3>
-					<p>Tous les projets sont différents. Nous profitons de cette diversité pour apprendre continuellement et toujours viser l’excellence. Ainsi, nous mettons à profit ces retours d’expérience au service de vos produits.</p>
+					<h2>Extia</h2>
+					<h3>Paré à toute éventualité !</h3>
+					<p>Nous tirons notre expertise d’Extia, qui met à votre disposition ses meilleurs consultants qui vous garantissent la réussite de votre projet au Time-To-Market optimisé, aux risques maîtrisés, avec les méthodes de gestion de projet les plus rodées. </p>
 				</div>
 				<div class="large-8 large-pull-4 columns">
 					<img src="http://placehold.it/790x500&text=svg" alt="">
