--- a/web/assets/scss/style.scss
+++ b/web/assets/scss/style.scss
@@ -165,19 +165,19 @@ a {
 .landing-home{
 	height:rem-calc(500);
 	padding-top: rem-calc(63);
-	
-	@media #{$medium-up} {
-		height:rem-calc(850);
-		padding-top: rem-calc(120);
-	}
+
 	width: 100%;
-	background-image: url('http://placehold.it/320x200/f0f0f0/dddddd/&text=background');
-	background-size: cover;
+	background-image: url('../img/landing-bg-small.jpg');
+		background-size: cover;
+	
 	-webkit-backface-visibility: hidden; 
 	-webkit-transform: translateZ(0);
 	z-index:1;
 
 	@media #{$medium-up}{
+		height:rem-calc(850);
+		padding-top: rem-calc(120);
+
 		background-image: url('../img/landing-bg.jpg');
 		position: fixed; top:0; left:0;
 
@@ -287,17 +287,20 @@ a {
 		height: rem-calc(500);
 
 		&#VALEUR-dispatch{
-			transform: scale(1.3) translateX(-5rem);
+			@media #{$medium-up} {
+				transform: scale(1.3) translateX(-5rem);
+			}
 		}
 
 		&#RISK-dispatch{
-			transform: scale(1.32) translateX(6rem);
-		height: rem-calc(250);
-		@media #{$medium-up} {
-			height: rem-calc(500);
+			@media #{$medium-up} {
+				transform: scale(1.32) translateX(6rem);
+			}
+			height: rem-calc(250);
+			@media #{$medium-up} {
+				height: rem-calc(500);
+			}
 		}
-
-	}
 	}
 	 
 	.row{
@@ -341,11 +344,16 @@ a {
 		margin: 0 0 0.5rem 0;
 	}
 	h3{
-		font-size:rem-calc(64);
+		
+		font-size:rem-calc(32);
 		font-family: Ubuntu;
 		font-weight: 700;
 		margin: 0rem 0 3.5rem 0;
 		position: relative;
+
+		@media #{$medium-up} {
+			font-size:rem-calc(64);
+		}
 
 		&:after{
 			width: 50%;
