Added correct sentences for demo

--- a/views/contact.html.twig
+++ b/views/contact.html.twig
@@ -8,7 +8,7 @@
 			</div>
 			<div class="row">
 				<div class="large-8 columns">
-					<h1>Ecoute, <br> maman est près de toi ?</h1>
+					<h1>Nous contacter</h1>
 				</div>
 			</div>
 		</header>
