--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -37,7 +37,7 @@
 		  	</div>
 		</div>
 		<footer>
-			<div class="copyright">Kilix love extia copyright tout ça</div>
+			<div class="copyright">Copyright Kilix extia</div>
 		</footer>
 		<!-- TODO : Par la suite le fichier mix.js générera le min.js -->
   		{% include "scripts-debug.html.twig" %}
