--- a/web/assets/scss/style.scss
+++ b/web/assets/scss/style.scss
@@ -1,5 +1,5 @@
-@import url(http://fonts.googleapis.com/css?family=Ubuntu:400,500,700);
-@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro);
+@import url(http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700);
+@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700);
 
 
 /* PROTOTYPING */
@@ -9,11 +9,27 @@ $primary-color : #384047;
 $second-color: #a8b7bf;
 $text-color : #8c989e;
 
-$col1: #e63429;
-$col2: #f39c12;
+$col1: #61AFF0;
+$col2: #ff4a46;
 $col3: #009884;
-$col4: #85cedf;
+$col4: #e79027;
 $col5: #087ec2;
+
+$small-margin:500;
+$medium-margin:600;
+$large-margin:850;
+
+
+/* MIXINS */
+@mixin colorize($col){
+	/*Du plus foncé au plus clair*/
+	*[fill="#FFFFFF"]{fill:lighten($col,23%);} 	//-23%
+	*[fill="#ECECEC"]{fill:lighten($col,15%);} 	//-15%
+	*[fill="#D9D9D9"]{fill:lighten($col,8%);} 	//-8%
+	*[fill="#C6C6C5"]{fill:$col;} 				//Couleur de base
+	*[fill="#B1B1B1"]{fill:darken($col,7%);} 	//+7%
+	*[fill="#9C9B9B"]{fill:#2c313f; /*darken($col,17%);*/} 	//+17%
+}
 
 /* BASE */
 body {
@@ -21,6 +37,7 @@ body {
 	transition: height 1s;
 	background: #fff;
 	min-height: 800px;
+	color: $primary-color;
 }
 
 
@@ -163,7 +180,7 @@ a {
 
 /*HOME*/
 .landing-home{
-	height:rem-calc(500);
+	height:rem-calc($small-margin);
 	padding-top: rem-calc(63);
 
 	width: 100%;
@@ -175,13 +192,17 @@ a {
 	z-index:1;
 
 	@media #{$medium-up}{
-		height:rem-calc(850);
+		height:rem-calc($medium-margin);
 		padding-top: rem-calc(120);
 
-		background-image: url('../img/landing-bg.jpg');
+		background-image: url('../img/landing-bg.jpg');background-size: cover; background-position: top right;
 		position: fixed; top:0; left:0;
 
 	}
+
+	@media #{$xlarge-up}{
+		height:rem-calc($large-margin);
+	}	
 
 	.row {
 		height: 100%;
@@ -192,9 +213,9 @@ a {
 	}
 
 	p{
-		font-size:rem-calc(24);
+		font-size:rem-calc(20);
 		margin-bottom: 3rem;
-		color:white;
+		color:rgba(175, 175, 175, 0.52);
 	}
 
 	.landing-button{
@@ -219,11 +240,9 @@ a {
 		}
 
 		span{
-			font-size: 15px;
-			font-weight: lighter;
+			font-size: rem-calc(20);
 			padding-left: 15px;
 			margin-top: -5px;
-			text-decoration: underline;
 			display: inline-block;
 		}
 	}
@@ -231,12 +250,18 @@ a {
 	.landing-main-text {
 		
 		color:white;
+		font-weight: normal;
 
 		@media #{$medium-up} {
 			margin-top: rem-calc(150);
-			font-size: rem-calc(80);
-			font-weight: bold;
-			line-height: rem-calc(88);
+			font-size: rem-calc(50);
+			line-height: rem-calc(50);
+		}
+
+		@media #{$xlarge-up} {
+			margin-top: rem-calc(250);
+			font-size: rem-calc(70);
+			line-height: rem-calc(80);
 		}
 	}
 
@@ -258,65 +283,123 @@ a {
 	}
 }
 
-// #casque{
-// 	polygon{
-// 		&:nth-child(1){ fill: lighten($col3,5%); } //default
-// 		&:nth-child(2){ fill: darken($col3,5%); } //darken
-// 		&:nth-child(3){ fill: darken($col3,30%); }
-// 		&:nth-child(4){ fill: lighten($col3,10%); } //lighten
-// 	}
-// }
 
-// *[id*="green"], *[id*="vert"], #carenage-left, #moteur-elec-green path{
-// 	fill: $col3;
-// }
+
 
 
 .svg-anim{
 	position:relative;
 	z-index:2;
-	background:white;
+	background:#ECECF5;
+	border-bottom: 3px solid rgba(0,0,0,0.1);
+
+	&.svg-extia{
+		.row{
+			border:0;
+		}
+	}
+
+
+	@media #{$xlarge-up}{
+		// &:before{
+		// 	display: block;
+		// 	text-align: center;
+		// 	color: white;
+		// 	font-size: rem-calc(24);
+		// 	text-transform: uppercase;
+		// 	font-weight: bold;
+		// 	padding: 1.5rem 0;
+		// 	font-family: Ubuntu;
+		// 	content: attr(data-title);
+		// 	box-shadow:0px 1px 0px 0px rgba(0, 0, 0, 0.4);
+		// 	text-shadow:0px 1px 0px rgba(0, 0, 0, 0.4);
+		// 	width: 32rem;
+		// 	margin: 0 auto;
+		// 	border-radius: 0 0 10px 10px;
+		// 	z-index: 10;
+		// 	position: relative;
+		// }
+	}
 	
 
-	.large-4{
-		z-index:2
+
+	.anim-content{
+		z-index:2;
+		text-align: center;
+
+		@media #{$medium-up}{
+			text-align:left;
+		}
+
+		@media #{$large-up}{
+			text-align:center;
+		}
+
+		@media #{$xlarge-up}{
+			//margin-top: rem-calc(60);
+		}
 	}
 
 	svg{
 		width: 100%;
-		height: rem-calc(500);
+		height: rem-calc(250);
+		
+		@media #{$medium-up}{
+			height: rem-calc(500);
+		}
 
 		&#VALEUR-dispatch{
 			@media #{$medium-up} {
-				transform: scale(1.3) translateX(-5rem);
+				transform: scale(1.6) translateX(-8rem);
 			}
+
+			// #valeur-carenage-front{@include colorize($col1);}
+			// #valeur-carenage-left{@include colorize($col1);}
+			// #valeur-carenage-right{@include colorize($col1);}
+			// #valeur-volant{@include colorize($col1);}
+			#casque{@include colorize($col1);}
+			[fill="#95C11F"]{fill:$col1;}
+
 		}
 
 		&#RISK-dispatch{
 			@media #{$medium-up} {
-				//transform: scale(1.32) translateX(6rem);
+				transform: scale(1.32) translateX(6rem);
 			}
 			height: rem-calc(250);
 			@media #{$medium-up} {
 				height: rem-calc(500);
 			}
+
+			#risk-casque{@include colorize($col2);}
+		}
+
+		&#EXTIA{
+			@media #{$xlarge-up}{
+				transform:scale(1.2) translateX(-3rem);
+			}
 		}
 	}
 	 
 	.row{
-		border-bottom: 1px solid #e3e3e3;
-		padding: 5rem 0;position: relative;
+		padding: 2rem 0;position: relative;
+
+		@media #{$medium-up}{
+			padding: 5rem 0;
+		}
 		
 		.next-section{
 			position: absolute;
-			bottom:0; left: 0;
-			bottom: rem-calc(100);
-			left: rem-calc(20);
+			bottom: 0;
+			left: 0;
+			bottom: -6.25rem;
+			left: 50%;
+			transform: translateX(-50%);
 
 			.icon-long-arrow-down{
 				text-align: center;
 				border-radius: 50%;
-				border: 2px solid black;
+				border: 2px solid $primary-color;
 				padding-top: 0.5rem;
 				width: rem-calc(52);
 				height: rem-calc(52);
@@ -339,37 +422,43 @@ a {
 	}
 
 	h2{
-		font-size:rem-calc(22);
-		font-weight: 400;
+		font-size:rem-calc(20);
+		font-family: Source Sans pro;
+		text-transform: uppercase;
 		margin: 0 0 0.5rem 0;
+
+		@media #{$medium-up}{
+			font-size:rem-calc(26);
+		}
 	}
 	h3{
 		
 		font-size:rem-calc(32);
 		font-family: Ubuntu;
-		font-weight: 700;
-		margin: 0rem 0 3.5rem 0;
+		font-weight: 500;
+		margin: 2rem 0 0 0;
 		position: relative;
 
 		@media #{$medium-up} {
-			font-size:rem-calc(64);
+			font-size:rem-calc(40);
+		}
+
+		@media #{$xlarge-up} {
+			font-size:rem-calc(50);
+			margin: 4rem 0 0 0;
 		}
 
 		&:after{
-			width: 50%;
-			height:3px;
+			width: 5rem;
+			height: 4px;
 			position: absolute;
 			content: " ";
-			bottom: -2rem;
-			left: 0;
+			top: -1.5rem;
+			left: 50%;
+			transform: translateX(-50%);
 		}
 	}
 
-	&:last-child{
-		.row{
-			border-bottom:none;
-		}
-	}
 }
 
 
@@ -377,17 +466,67 @@ a {
 	box-shadow: 0 -7px 0 rgba(0,0,0,.1);
 
 	@media #{$medium-up} {
-		margin-top:rem-calc(850);
+		margin-top:rem-calc($medium-margin);
 	}
 
-	h3:after{background:$col1;}
+	@media #{$large-up} {
+		
 
+		h2 { 
+			font-size:rem-calc(50); line-height: 0.86em;
+			&>span:first-child{
+				display: block;font-size:1em;
+				span{ font-size: 0.8em;}
+			}
+
+			&>span:nth-child(2){
+				font-size:0.6em;
+				transform: translateY(-1rem) translateX(0.2rem);
+				display: inline-block;
+			}
+
+			&>span:last-child{
+				font-size:1.3em;
+				font-weight: bold;
+				color:$col1;
+			}
+		}
+	}
+
+	@media #{$xlarge-up} { 
+		margin-top:rem-calc($large-margin); 
+		h2{font-size:rem-calc(65);} 
+	}
+
+	h3:after, &:before{background:$col1;}
 	.row .next-section .icon-long-arrow-down:hover{ background: $col1; }
 }
 .svg-risque{
-	h3:after{background:$col2;}
-	
-	.row .next-section{ left:auto; right:rem-calc(20); }
+
+	@media #{$large-up} {
+		h2 { 
+			font-size:rem-calc(50); line-height: 0.86em;
+			span:first-child{
+				display: block;font-size:1em;
+			}
+
+			span:nth-child(2){
+				font-size:0.6em;
+				transform: translateY(-1rem) translateX(0.2rem);
+				display: inline-block;
+			}
+
+			span:last-child{
+				font-size:1.2em;
+				font-weight: bold;
+				color:$col2;
+			}
+		}
+	}
+
+	@media #{$xlarge-up} { h2{font-size:rem-calc(65);} }
+
+	h3:after,&:before{background:$col2;}
 	.row .next-section .icon-long-arrow-down:hover{ background: $col2; }
 }
 .svg-amelio{
@@ -395,13 +534,36 @@ a {
 		.large-8{margin-top:-20rem;}
 	}
 
-	h3:after{background:$col3;}
+	@media #{$large-up} {
+		h2 { 
+			font-size:rem-calc(50); line-height: 0.9em;
+			span:first-child{
+				display: block;font-size:1em;
+			}
 
+			span:last-child{
+				font-size:1.38em;
+				font-weight: bold;
+				color:$col3;
+			}
+		}
+	}
+
+	@media #{$xlarge-up} { h2{font-size:rem-calc(65);} }
+
+	h3:after, &:before{background:$col3;}
 	.row .next-section .icon-long-arrow-down:hover{ background: $col3; }
 }
 .svg-extia{
-	h3:after{background:$col4;}
 
+	@media #{$large-up} {
+		h2 { 
+			font-size:rem-calc(80); line-height: 0.9em; color:$col4; font-weight: bold;
+		}
+	}
+	@media #{$xlarge-up} { h2{font-size:rem-calc(100);} }
+
+	h3:after, &:before{background:$col4;}
 	.row .next-section .icon-long-arrow-down:hover{ background: $col4; }
 }
 
@@ -457,15 +619,12 @@ div.references{
 	padding: 1.5rem 0 0 0;
 
 	.columns{
-		margin-bottom:1rem;
+		margin-bottom:2rem;
 	}
 
 	@media #{$medium-up} {
-		padding: 4rem 0;
+		padding: 3rem 0 1rem;
 
-		.columns{
-			margin-bottom:0;
-		}
 	}
 }
 
@@ -502,7 +661,7 @@ div.references{
 /*FOOTER*/
 .footer-contact{
 
-	background: url('../img/bg-footer.png') #39444e;
+	background: url('../img/bg-footer.jpg') #39444e;
 	background-size:cover;
 	text-align:center;
 	position:relative; z-index:1;
@@ -532,10 +691,12 @@ footer{
 
 	background: #202529;
 	text-align: center;
-	padding: 4rem 0;
+	padding: 2rem 0;
 
 	.copyright{
-		font-size:rem-calc(18);
-		color:white;
+		font-size: rem-calc(18);
+		color: #7E7E7E;
+		font-weight: 400;
+		line-height: 22px;
 	}
 }
